[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-chianode"
version = "0.0.1"
authors = [
  { name="CircuitDAO", email="info@circuitdao.com" },
]
description = "Python wrapper for Chia blockchain node APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/circuitdao/python-chianode"
"Bug Tracker" = "https://github.com/circuitdao/python-chianode/issues"
