[tool.poetry]
name = "python-chianode"
version = "0.1.1"
description = "Python wrapper for Chia blockchain node APIs"
authors = ["CircuitDAO <info@circuitdao.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chianode"}]
homepage = "https://github.com/circuitdao/python-chianode"
keywords = ["Chia", "blockchain", "node", "full node", "wrapper", "API"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"

[tool.poetry.dependencies]
python = "^3.7"
anyio = "3.6.2"
async-generator = "1.10"
build = "0.10.0"
certifi = "2023.7.22"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "0.17.3"
httpx = "0.24.1"
hyperframe = "6.0.1"
idna = "3.4"
iniconfig = "2.0.0"
packaging = "23.1"
pluggy = "1.2.0"
pyproject_hooks = "1.0.0"
sniffio = "1.3.0"
pyyaml = "^6.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
chia-blockchain = ">=1.8.0, <2.0.0"
pytest = "7.4.0"
pytest-asyncio = "0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
